--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="./images/image.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+
+    <!-- Contact Section CSS Improvements -->
+    <style>
+        .contact-section {
+            background: #f8f9fa;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        .contact-map iframe {
+            border-radius: 8px;
+            width: 100%;
+            height: 350px;
+        }
+
+        .contact-form {
+            background: #ffffff;
+            border-radius: 10px;
+            transition: 0.3s ease;
+        }
+
+        .contact-form:hover {
+            transform: translateY(-3px);
+        }
+
+        .contact-form .form-control {
+            height: 45px;
+            border-radius: 6px;
+        }
+
+        .contact-form textarea {
+            border-radius: 6px;
+        }
+
+        .contact-form button {
+            font-size: 16px;
+            border-radius: 6px;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -154,29 +194,76 @@
         </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="contact">
-        <h1 class="heading">Get in Touch</h1>
+    <!-- UPDATED CONTACT SECTION -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h1 class="heading text-center mb-4">Get in Touch</h1>
+
+            <div class="row">
+
+                <!-- Map -->
+                <div class="col-lg-6 col-md-12 mb-4">
+                    <div class="contact-map shadow-sm rounded overflow-hidden">
+                        <iframe 
+                            src="https://www.google.com/maps?q=13666+Vendelsö,+Stockholm,+Sweden&output=embed" 
+                            width="100%" height="350" style="border:0;" allowfullscreen loading="lazy">
+                        </iframe>
+                    </div>
+                </div>
+
+                <!-- Contact Form -->
+                <div class="col-lg-6 col-md-12">
+                    <div class="contact-form shadow-sm p-4 rounded bg-white">
+                        <form action="./contactme.php" method="POST" autocomplete="off">
+
+                            <div class="form-group">
+                                <label for="name">Full Name</label>
+                                <input 
+                                    type="text" id="name" name="name" 
+                                    class="form-control" 
+                                    placeholder="Enter your name"
+                                    required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="phone">Phone Number</label>
+                                <input 
+                                    type="tel" id="phone" name="phone" 
+                                    class="form-control" 
+                                    placeholder="Enter your contact number"
+                                    required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="email">Email Address</label>
+                                <input 
+                                    type="email" id="email" name="email" 
+                                    class="form-control" 
+                                    placeholder="Enter your email"
+                                    required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="message">Your Message</label>
+                                <textarea 
+                                    id="message" name="message" 
+                                    class="form-control" 
+                                    rows="5"
+                                    placeholder="Write your message"
+                                    required></textarea>
+                            </div>
+
+                            <button type="submit" name="submit" class="btn btn-primary btn-block py-2">
+                                Send Message
+                            </button>
+
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </section>
-
-    <div class="contact-in">
-        <div class="contact-map">
-            <iframe 
-                src="https://www.google.com/maps?q=13666+Vendelsö,+Stockholm,+Sweden&output=embed" 
-                width="100%" height="auto" style="border:0;" allowfullscreen loading="lazy">
-            </iframe>
-        </div>
-
-        <div class="contact-form">
-            <form action="./contactme.php" method="POST">
-                <input type="text" name="name" placeholder="Name" required>
-                <input type="tel" name="phone" placeholder="Contact Number" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <textarea placeholder="Your Message" name="message" required></textarea>
-                <input type="submit" value="Submit" name="submit">
-            </form>
-        </div>
-    </div>
 
     <!-- FOOTER -->
     <div class="footer">
@@ -184,7 +271,6 @@
             <div class="container">
                 <div class="row">
 
-                    <!-- ABOUT LINKS -->
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>About</h4>
                         <ul>
@@ -196,7 +282,6 @@
                         </ul>
                     </div>
 
-                    <!-- USEFUL LINKS -->
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
@@ -207,7 +292,6 @@
                         </ul>
                     </div>
 
-                    <!-- CONTACT INFORMATION -->
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contact Us</h4>
                         <p>
@@ -219,7 +303,6 @@
                         </p>
                     </div>
 
-                    <!-- NEWSLETTER -->
                     <div class="col-lg-3 col-md-6 footer-newsletter">
                         <h4>Subscription</h4>
                         <p>Subscribe to get our latest updates and service offers.</p>
