--- a/index.html
+++ b/index.html
@@ -11,45 +11,87 @@
     <link rel="icon" href="./images/image.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
-    <!-- Contact Section CSS Improvements -->
+    <!-- Custom CSS for Team and Contact Sections -->
     <style>
+        /* CONTACT SECTION */
         .contact-section {
             background: #f8f9fa;
             padding-top: 60px;
             padding-bottom: 60px;
         }
-
         .contact-map iframe {
             border-radius: 8px;
             width: 100%;
             height: 350px;
         }
-
         .contact-form {
             background: #ffffff;
             border-radius: 10px;
             transition: 0.3s ease;
         }
-
         .contact-form:hover {
             transform: translateY(-3px);
         }
-
         .contact-form .form-control {
             height: 45px;
             border-radius: 6px;
         }
-
         .contact-form textarea {
             border-radius: 6px;
         }
-
         .contact-form button {
             font-size: 16px;
             border-radius: 6px;
         }
-    </style>
 
+        /* TEAM SECTION */
+        .team-section {
+            background: #fafafa;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+        .team-card {
+            background: #fff;
+            border-radius: 15px;
+            transition: 0.3s ease;
+            margin-bottom: 30px;
+        }
+        .team-card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+        }
+        .team-img-wrapper {
+            width: 150px;
+            height: 150px;
+            margin: 0 auto 15px;
+            overflow: hidden;
+            border-radius: 50%;
+            border: 5px solid #007bff33;
+        }
+        .team-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .team-name {
+            font-size: 22px;
+            font-weight: 600;
+        }
+        .team-role {
+            font-size: 15px;
+            color: #666;
+        }
+        .team-social a {
+            display: inline-block;
+            margin: 0 8px;
+            font-size: 18px;
+            color: #007bff;
+            transition: 0.3s ease;
+        }
+        .team-social a:hover {
+            color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
@@ -170,27 +212,32 @@
         </div>
     </section>
 
-    <!-- TEAM -->
-    <section class="team" id="team">
-        <h1 class="heading">Our Team</h1>
-        <p style="text-align:center;">A one-man powerhouse delivering complete IT solutions.</p>
+    <!-- UPDATED TEAM SECTION -->
+    <section class="team-section py-5" id="team">
+        <div class="container">
+            <h1 class="heading text-center mb-4">Our Team</h1>
+            <p class="text-center mb-5" style="font-size: 17px;">
+                A dedicated professional powering complete IT and cloud solutions.
+            </p>
 
-        <div class="row">
-            <div class="card">
-                <div class="image">
-                    <img src="./images/team-placeholder.jpg" alt="Shoaib Amanat">
-                </div>
-                <div class="info">
-                    <h3>Shoaib Amanat</h3>
-                    <span>Founder & Full-Stack Developer</span>
-                    <div class="icons">
-                        <a href="#" class="fab fa-facebook-f"></a>
-                        <a href="#" class="fab fa-twitter"></a>
-                        <a href="#" class="fab fa-instagram"></a>
-                        <a href="#" class="fab fa-linkedin"></a>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="team-card shadow-sm p-4 text-center">
+                        <div class="team-img-wrapper mb-3">
+                            <img src="./images/team-placeholder.jpg" class="team-img" alt="Shoaib Amanat">
+                        </div>
+                        <h3 class="team-name mb-1">Shoaib Amanat</h3>
+                        <p class="team-role mb-3">Founder & Full Stack Developer</p>
+                        <div class="team-social">
+                            <a href="#" class="fab fa-facebook-f"></a>
+                            <a href="#" class="fab fa-twitter"></a>
+                            <a href="#" class="fab fa-instagram"></a>
+                            <a href="#" class="fab fa-linkedin"></a>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -218,39 +265,22 @@
 
                             <div class="form-group">
                                 <label for="name">Full Name</label>
-                                <input 
-                                    type="text" id="name" name="name" 
-                                    class="form-control" 
-                                    placeholder="Enter your name"
-                                    required>
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="phone">Phone Number</label>
-                                <input 
-                                    type="tel" id="phone" name="phone" 
-                                    class="form-control" 
-                                    placeholder="Enter your contact number"
-                                    required>
+                                <input type="tel" id="phone" name="phone" class="form-control" placeholder="Enter your contact number" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="email">Email Address</label>
-                                <input 
-                                    type="email" id="email" name="email" 
-                                    class="form-control" 
-                                    placeholder="Enter your email"
-                                    required>
+                                <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="message">Your Message</label>
-                                <textarea 
-                                    id="message" name="message" 
-                                    class="form-control" 
-                                    rows="5"
-                                    placeholder="Write your message"
-                                    required></textarea>
+                                <textarea id="message" name="message" class="form-control" rows="5" placeholder="Write your message" required></textarea>
                             </div>
 
                             <button type="submit" name="submit" class="btn btn-primary btn-block py-2">
