--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
     </section>
 
-    <!-- UPDATED TEAM SECTION -->
+    <!-- UPDATED TEAM SECTION WITH YOUR PICTURE -->
     <section class="team-section py-5" id="team">
         <div class="container">
             <h1 class="heading text-center mb-4">Our Team</h1>
@@ -224,7 +224,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="team-card shadow-sm p-4 text-center">
                         <div class="team-img-wrapper mb-3">
-                            <img src="./images/team-placeholder.jpg" class="team-img" alt="Shoaib Amanat">
+                            <img src="./images/team-shoaib.png" class="team-img" alt="Shoaib Amanat">
                         </div>
                         <h3 class="team-name mb-1">Shoaib Amanat</h3>
                         <p class="team-role mb-3">Founder & Full Stack Developer</p>
