--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <link rel="icon" href="./images/image.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
-    <!-- Custom CSS for Team and Contact Sections -->
     <style>
-        /* CONTACT SECTION */
         .contact-section {
             background: #f8f9fa;
-            padding-top: 60px;
-            padding-bottom: 60px;
+            padding: 60px 0;
         }
         .contact-map iframe {
             border-radius: 8px;
@@ -27,34 +24,15 @@
         .contact-form {
             background: #ffffff;
             border-radius: 10px;
-            transition: 0.3s ease;
         }
-        .contact-form:hover {
-            transform: translateY(-3px);
-        }
-        .contact-form .form-control {
-            height: 45px;
-            border-radius: 6px;
-        }
-        .contact-form textarea {
-            border-radius: 6px;
-        }
-        .contact-form button {
-            font-size: 16px;
-            border-radius: 6px;
-        }
-
-        /* TEAM SECTION */
         .team-section {
             background: #fafafa;
-            padding-top: 60px;
-            padding-bottom: 60px;
+            padding: 60px 0;
         }
         .team-card {
             background: #fff;
             border-radius: 15px;
-            transition: 0.3s ease;
-            margin-bottom: 30px;
+            transition: 0.3s;
         }
         .team-card:hover {
             transform: translateY(-6px);
@@ -63,9 +41,9 @@
         .team-img-wrapper {
             width: 150px;
             height: 150px;
-            margin: 0 auto 15px;
-            overflow: hidden;
+            margin: auto;
             border-radius: 50%;
+            overflow: hidden;
             border: 5px solid #007bff33;
         }
         .team-img {
@@ -73,282 +51,128 @@
             height: 100%;
             object-fit: cover;
         }
-        .team-name {
-            font-size: 22px;
-            font-weight: 600;
-        }
-        .team-role {
-            font-size: 15px;
-            color: #666;
-        }
         .team-social a {
-            display: inline-block;
             margin: 0 8px;
-            font-size: 18px;
+            font-size: 20px;
             color: #007bff;
-            transition: 0.3s ease;
         }
-        .team-social a:hover {
-            color: #0056b3;
+        .team-social a.fa-whatsapp {
+            color: #25D366;
+        }
+
+        /* Floating WhatsApp Button */
+        .whatsapp-float {
+            position: fixed;
+            bottom: 25px;
+            right: 25px;
+            background-color: #25D366;
+            color: #fff;
+            width: 55px;
+            height: 55px;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 28px;
+            line-height: 55px;
+            z-index: 999;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+        }
+        .whatsapp-float:hover {
+            color: #fff;
+            background-color: #1ebe5d;
         }
     </style>
 </head>
 
 <body>
 
-    <!-- HEADER -->
-    <header class="header">
-        <a href="#" class="logo"><img src="./images/image.png" alt="logo"></a>
-        <div class="fas fa-bars"></div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#service">services</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#team">team</a></li>
-                <li><a href="careers.html">career</a></li>
-                <li><a href="#contact">contact</a></li>
-                <li><a href="#faq">FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="header">
+    <a href="#" class="logo"><img src="./images/image.png" alt="logo"></a>
+    <div class="fas fa-bars"></div>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#home">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#service">services</a></li>
+            <li><a href="#team">team</a></li>
+            <li><a href="#contact">contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <!-- HOME -->
-    <section id="home" class="home">
-        <h1>Nordic Tech & Cloud Solution</h1>
-        <h2>Your Trusted Partner for IT, Cloud & Digital Transformation</h2>
-        <div class="wave wave1"></div>
-        <div class="wave wave2"></div>
-        <div class="wave wave3"></div>
-    </section>
+<section id="home" class="home">
+    <h1>Nordic Tech & Cloud Solution</h1>
+    <h2>Your Trusted Partner for IT, Cloud & Digital Transformation</h2>
+</section>
 
-    <!-- ABOUT -->
-    <section id="about" class="about">
-        <h1 class="heading">About Us</h1>
+<section id="about" class="about">
+    <h1 class="heading">About Us</h1>
+    <p class="text-center">
+        Sweden-based IT company delivering modern digital and cloud solutions.
+    </p>
+</section>
+
+<section class="team-section" id="team">
+    <div class="container text-center">
+        <h1 class="heading mb-4">Our Team</h1>
+        <div class="row justify-content-center">
+            <div class="col-lg-4">
+                <div class="team-card p-4">
+                    <div class="team-img-wrapper mb-3">
+                        <img src="./images/team-shoaib.png" class="team-img" alt="Shoaib Amanat">
+                    </div>
+                    <h3>Shoaib Amanat</h3>
+                    <p>Founder & Full Stack Developer</p>
+                    <div class="team-social">
+                        <a href="https://wa.me/46700307289" target="_blank" class="fab fa-whatsapp" title="Chat on WhatsApp"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="contact" class="contact-section">
+    <div class="container">
+        <h1 class="heading text-center mb-4">Get in Touch</h1>
         <div class="row">
-            <div class="content">
-                <h3>Empowering Businesses with Nordic Innovation</h3>
-                <p>
-                    Nordic Tech & Cloud Solution is a Sweden-based IT company founded and operated by 
-                    <b>Shoaib Amanat</b>. We deliver high-quality digital solutions including website 
-                    development, mobile apps, IT consultancy, cloud server setup, computer networking, 
-                    and digital marketing.
-                    <br><br>
-                    We focus on modern, scalable, and secure solutions that help individuals and businesses 
-                    grow in the digital world.
-                </p>
-                <a href="#"><button class="btn">Read More</button></a>
+            <div class="col-lg-6 mb-4">
+                <iframe 
+                    src="https://www.google.com/maps?q=13666+Vendelsö,+Stockholm,+Sweden&output=embed"
+                    style="border:0;" allowfullscreen loading="lazy">
+                </iframe>
             </div>
-        </div>
-    </section>
-
-    <!-- SERVICES -->
-    <div class="pt-5 pb-5" style="background-color:#f2f2f2;">
-        <div class="container">
-            <div class="row">
-                <div class="section-head col-sm-12" id="service">
-                    <h1>Our Services</h1>
-                    <p>Delivering high-quality digital services and IT solutions to help your business grow.</p>
-                </div>
-
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item">
-                        <span class="icon feature_box_col_one">
-                            <i class="fa fa-laptop"></i>
-                        </span>
-                        <h6>Web Development</h6>
-                        <p>Custom, responsive and modern websites designed to help your online presence stand out.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item">
-                        <span class="icon feature_box_col_two">
-                            <i class="fa fa-android"></i>
-                        </span>
-                        <h6>Mobile App Development</h6>
-                        <p>Android and iOS applications with high performance and seamless user experience.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item">
-                        <span class="icon feature_box_col_three">
-                            <i class="fa fa-cloud"></i>
-                        </span>
-                        <h6>Cloud Solutions</h6>
-                        <p>Cloud server deployment, configuration and management for secure business operations.</p>
-                    </div>
-                </div>
-
+            <div class="col-lg-6">
+                <form class="contact-form p-4" action="./contactme.php" method="POST">
+                    <input type="text" class="form-control mb-3" placeholder="Your Name" required>
+                    <input type="email" class="form-control mb-3" placeholder="Your Email" required>
+                    <textarea class="form-control mb-3" rows="5" placeholder="Message"></textarea>
+                    <button class="btn btn-primary btn-block">Send Message</button>
+                </form>
             </div>
         </div>
     </div>
+</section>
 
-    <!-- COUNTERS -->
-    <section class="counters">
-        <div class="container">
-            <div>
-                <i class="far fa-clock fa-4x"></i>
-                <div class="counter" data-target="100">0</div>
-                <h3>Working Hours</h3>
-            </div>
-            <div>
-                <i class="fas fa-gift fa-4x"></i>
-                <div class="counter" data-target="20">0</div>
-                <h3>Completed Projects</h3>
-            </div>
-            <div>
-                <i class="fas fa-users fa-4x"></i>
-                <div class="counter" data-target="5">0</div>
-                <h3>Happy Clients</h3>
-            </div>
-            <div>
-                <i class="fas fa-award fa-4x"></i>
-                <div class="counter" data-target="5">0</div>
-                <h3>Awards Received</h3>
-            </div>
-        </div>
-    </section>
-
-    <!-- UPDATED TEAM SECTION WITH YOUR PICTURE -->
-    <section class="team-section py-5" id="team">
-        <div class="container">
-            <h1 class="heading text-center mb-4">Our Team</h1>
-            <p class="text-center mb-5" style="font-size: 17px;">
-                A dedicated professional powering complete IT and cloud solutions.
-            </p>
-
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="team-card shadow-sm p-4 text-center">
-                        <div class="team-img-wrapper mb-3">
-                            <img src="./images/team-shoaib.png" class="team-img" alt="Shoaib Amanat">
-                        </div>
-                        <h3 class="team-name mb-1">Shoaib Amanat</h3>
-                        <p class="team-role mb-3">Founder & Full Stack Developer</p>
-                        <div class="team-social">
-                            <a href="#" class="fab fa-facebook-f"></a>
-                            <a href="#" class="fab fa-twitter"></a>
-                            <a href="#" class="fab fa-instagram"></a>
-                            <a href="#" class="fab fa-linkedin"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- UPDATED CONTACT SECTION -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <h1 class="heading text-center mb-4">Get in Touch</h1>
-
-            <div class="row">
-
-                <!-- Map -->
-                <div class="col-lg-6 col-md-12 mb-4">
-                    <div class="contact-map shadow-sm rounded overflow-hidden">
-                        <iframe 
-                            src="https://www.google.com/maps?q=13666+Vendelsö,+Stockholm,+Sweden&output=embed" 
-                            width="100%" height="350" style="border:0;" allowfullscreen loading="lazy">
-                        </iframe>
-                    </div>
-                </div>
-
-                <!-- Contact Form -->
-                <div class="col-lg-6 col-md-12">
-                    <div class="contact-form shadow-sm p-4 rounded bg-white">
-                        <form action="./contactme.php" method="POST" autocomplete="off">
-
-                            <div class="form-group">
-                                <label for="name">Full Name</label>
-                                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" name="phone" class="form-control" placeholder="Enter your contact number" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="email">Email Address</label>
-                                <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="message">Your Message</label>
-                                <textarea id="message" name="message" class="form-control" rows="5" placeholder="Write your message" required></textarea>
-                            </div>
-
-                            <button type="submit" name="submit" class="btn btn-primary btn-block py-2">
-                                Send Message
-                            </button>
-
-                        </form>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- FOOTER -->
-    <div class="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>About</h4>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#about">About us</a></li>
-                            <li><a href="#service">Our services</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#team">Team</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li><a href="#faq">FAQ</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-contact">
-                        <h4>Contact Us</h4>
-                        <p>
-                            VENDELSÖMALMSVÄGEN 247 LGH 1504<br>
-                            136 66 Vendelsö, Stockholm<br>
-                            Sweden<br><br>
-                            <strong>WhatsApp:</strong> +46 700 307 289<br>
-                            <strong>Email:</strong> info@nordictechcloud.se
-                        </p>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-newsletter">
-                        <h4>Subscription</h4>
-                        <p>Subscribe to get our latest updates and service offers.</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="container text-center mt-3">
-            <p style="color:#fff;">© 2025 Nordic Tech & Cloud Solution. All Rights Reserved.</p>
-        </div>
+<footer class="footer bg-dark text-white p-4">
+    <div class="container text-center">
+        <p>
+            <strong>WhatsApp:</strong>
+            <a href="https://wa.me/46700307289" target="_blank" style="color:#25D366;">
+                +46 700 307 289
+            </a><br>
+            <strong>Email:</strong> info@nordictechcloud.se
+        </p>
+        <p>© 2025 Nordic Tech & Cloud Solution</p>
     </div>
+</footer>
+
+<!-- Floating WhatsApp Button -->
+<a href="https://wa.me/46700307289" target="_blank" class="whatsapp-float">
+    <i class="fab fa-whatsapp"></i>
+</a>
 
 </body>
 </html>
