--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-i need my website exect like this just in our team where i have social media logo i want to add whatsapp logo add this muber +4670030728 <!DOCTYPE html> 
+ <!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
